import "client.comm.proto";
package client;


message bows_info {
    required uint32 bow_id			= 1; // 弓箭ID and 阶数
    required uint32 advance_time	= 2;
    required uint32 advance_bless	= 3;
    required uint32 bow_level		= 4;
    required uint32 bow_exp			= 5;
    optional uint32 bow_power		= 6;
}

message bows_msg {
    repeated bows_info mi = 1;
}

message bows_level_rsp{
	repeated bows_info mi = 1;
}

// 弓箭进阶
message upgrade_bows_req {
    required uint32      bow_id    = 1;
    optional server_head svr_head  = 1000;
}

message upgrade_bows_rsp {
    required uint32 ret			= 1;
	repeated bows_info mi		= 2;
}

// 弓箭进阶时间请求
message bows_bless_time_req {
	required uint32 unixtime = 1;
	optional server_head svr_head = 1000;
}

message bows_bless_time_rsp {
	required uint32 remain_time = 1;
}

message bows_skill_fight_rsp{
	required uint32 attack_count = 1;
	required uint32 skill_index  = 2;
}